lat y lons finales cambiados a GEOCHE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(checkea_departamentos_ggmap_y_osm)
 export(checkea_provincia_ggmap_y_osm)
 export(combina_bases)
 export(compara_GGMAP_OSM)
+export(encuentra_ubicacion_generica_ggmap)
 export(genera_loc_domicilios)
 export(geocode_OSM_ariel)
 export(georreferencia_ggmap)
