--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,10 @@ Author: Ariel Salgado
 Maintainer: Ariel Salgado <asalgado@df.uba.ar>
 Description: Este paquete fue diseñado para validar georreferenciaciones realizadas mediante ggmap y tmaptools, teniendo en cuenta la geografía de la región de búsqueda a través de poligonos geoespaciales.
 Depends: ggmap, tmaptools, sf, stringr
-License: What license is it under?
+Suggests: knitr, rmarkdown
+VignetteBuilder: knitr
+License:  GNU Affero General Public License
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+
